# metaseq

./: .gitignore  build.sh  copy_to_osx.sh  design.wiki  display_profile.sh  gen_tags.sh  ideas.wiki  mseq.cabal  osx_watch.sh  profile_build_run.sh  proj.vim  run.sh  song.RPP  stack.yaml  watch_build.sh
app/: Application.hs  Main.hs  MainCommon.hs  MainLinux.hs  MainPortMidi.hs  ModeActions.hs  PortMidiHelpers.hs
src/: ApcMini.hs  AppMode.hs  AppModeName.hs  ArrangeMode.hs  ArrangeMode2.hs  ArrangementActions.hs  ClockExtra.hs  Config.hs  ControllerCommon.hs  ControllerFunctions.hs  GenericModes.hs  Input.hs  LaneActions.hs  LaneMode.hs  Launchpad.hs  LensExtra.hs  Misc.hs  Modes.hs  NetworkPlay.hs  NoteMode.hs  Player.hs  PlayerRunner.hs  Recorder.hs  RootNoteMode.hs  SeqConstants.hs  SeqEditActions.hs  SeqEditMode.hs  SeqLenses.hs  SeqQueries.hs  SeqSelectMode.hs  SeqTypes.hs  SequenceRender.hs  Sequencer.hs  StateFileIO.hs  Transport.hs  ZMidiHelpers.hs  example_config.hs
test/: Spec.hs
zmidi_core/: zmidi-core.cabal
zmidi_core/demo/: MidiCopy.hs
zmidi_core/src/ZMidi/Core/: ReadFile.hs  WriteFile.hs
zmidi_core/src/ZMidi/Core/Internal/: ExtraTypes.hs  ParserMonad.hs
